--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <li><a href="glossary.html">Glossary</a></li>
             <li><a href="survey.html">Survey</a></li>
             <li><a href="lorem.html">Lorem lpsum</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
           </ul>
         </nav>
       </header>
@@ -132,7 +133,7 @@
           </table>
         </div>
         <h2>My Favourite Things</h2>
-        <div class="my-fav-things" >
+        <div class="favourites" >
           <input type="radio" name="fav-things" value="tab1" id="tab1" checked/>
           <label for="tab1"><h3>Favourite Company</h3></label>
           <div>
