--- a/links.html
+++ b/links.html
@@ -58,6 +58,7 @@
             <li><a href="glossary.html">Glossary</a></li>
             <li><a href="survey.html">Survey</a></li>
             <li><a href="lorem.html">Lorem lpsum</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
           </ul>
         </nav>
       </header>
