--- a/gallery.html
+++ b/gallery.html
@@ -86,7 +86,10 @@
           <a href="https://loremflickr.com/1024/1024/?lock=10">
             <img src="https://loremflickr.com/300/300?lock=10" />
           </a>
-          <a href="https://loremflickr.com/1024/1024/?lock=11"class="row-span-2 col-span-2">
+          <a
+            href="https://loremflickr.com/1024/1024/?lock=11"
+            class="row-span-2 col-span-2"
+          >
             <img src="https://loremflickr.com/600/600?lock=12" />
           </a>
           <a href="https://loremflickr.com/1024/1024/?lock=12">
