--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
               sizes="(max-width:500px) 150px, 300px"
               srcset="images/my-dog-150w.jpg 150w, images/my-dog-300w.jpg 300w"
             />
+            <img src="images/paperclip.png" alt="paperclip" class="paperclip" />
           </a>
           <p>
             My name is Noah Strum, and I was born and raised in Sault Ste. Marie
@@ -133,8 +134,14 @@
           </table>
         </div>
         <h2>My Favourite Things</h2>
-        <div class="favourites" >
-          <input type="radio" name="fav-things" value="tab1" id="tab1" checked/>
+        <div class="favourites">
+          <input
+            type="radio"
+            name="fav-things"
+            value="tab1"
+            id="tab1"
+            checked
+          />
           <label for="tab1"><h3>Favourite Company</h3></label>
           <div>
             <figure>
