--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </p>
           </div>
           <input type="radio" name="fav-things" value="tab4" id="tab4" />
-          <label for="tab4"><h3>Public Domain Audiobook</h3></label>
+          <label for="tab4"><h3>Audiobook</h3></label>
           <div>
             <audio
               src="http://www.archive.org/download/mozartsyouth_2106_librivox/mozartsyouth_02_hoffmann_64kb.mp3"
