--- a/glossary.html
+++ b/glossary.html
@@ -41,6 +41,8 @@
     <div class="width-warp">
       <header id="top">
         <nav>
+          <input type="checkbox" name="menu-toggle" id="menu-toggle">
+          <label for="menu-toggle" class="sandwich-icon"></label>
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="links.html">Links</a></li>
